--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -11,6 +11,7 @@
 
     <form>
       <p>Your name: <input type = "text" name = "user_name"></p>
+      <p>Your favorite food: <input type = "text" name= "fav_food"></p>
       
     </form>
 
